--- a/esp-idf-irSend-Stack/main/CMakeLists.txt
+++ b/esp-idf-irSend-Stack/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS "spiffs_example_main.c")
+set(COMPONENT_SRCS "main.c" "fontx.c" "ir_nec.c" "ili9340.c")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
