--- a/esp-idf-irSend-Stick/main/CMakeLists.txt
+++ b/esp-idf-irSend-Stick/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS "main.c" "fontx.c" "ir_nec.c" "sh1107.c")
+set(COMPONENT_SRCS "main.c" "fontx.c" "sh1107.c")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
