Moved infrared transmit functionality to the component

--- a/esp-idf-irSend-StickC/CMakeLists.txt
+++ b/esp-idf-irSend-StickC/CMakeLists.txt
@@ -2,8 +2,12 @@
 # in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
+set(EXTRA_COMPONENT_DIRS ../components/infrared_tools)
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(m5StickC)
+
+idf_build_set_property(COMPILE_OPTIONS "-DM5STICK_C" APPEND)
 
 # Create a SPIFFS image from the contents of the 'font' directory
 # that fits the partition named 'storage'. FLASH_IN_PROJECT indicates that
